feat: ufw, openbooks, sqlite for paperless

--- a/hosts/pizero/roles/core/tasks/main.yml
+++ b/hosts/pizero/roles/core/tasks/main.yml
@@ -5,3 +5,11 @@
   tags:
     - install
     - core
+
+- name: Enable UFW
+  become: true
+  community.general.ufw:
+    state: enabled
+  tags:
+    - install
+    - core
