--- a/services/paperless/docker-compose.yml
+++ b/services/paperless/docker-compose.yml
@@ -10,10 +10,7 @@
 #   as this file and mounted to the correct folders inside the container.
 # - Paperless listens on port 8000.
 #
-# In addition to that, this Docker Compose file adds the following optional
-# configurations:
-#
-# - Instead of SQLite (default), PostgreSQL is used as the database server.
+# SQLite is used as the database. The SQLite file is stored in the data volume.
 #
 # To install and update paperless with this file, do the following:
 #
@@ -33,21 +30,10 @@ services:
     volumes:
       - redisdata:/data
 
-  db:
-    image: docker.io/library/postgres:16
-    restart: unless-stopped
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    environment:
-      POSTGRES_DB: paperless
-      POSTGRES_USER: paperless
-      POSTGRES_PASSWORD: paperless
-
   webserver:
     image: ghcr.io/paperless-ngx/paperless-ngx:latest
     restart: unless-stopped
     depends_on:
-      - db
       - broker
     ports:
       - "8000:8000"
@@ -59,10 +45,8 @@ services:
     env_file: docker-compose.env
     environment:
       PAPERLESS_REDIS: redis://broker:6379
-      PAPERLESS_DBHOST: db
 
 volumes:
   data:
   media:
-  pgdata:
   redisdata:
