feat: nginx-proxy-manager and irc highway port update

--- a/services/openbooks/docker-compose.yml
+++ b/services/openbooks/docker-compose.yml
@@ -8,6 +8,6 @@ services:
       - ~/Downloads/books/:/books
     ports:
       - "8080:80"
-    command: --persist --name pizero
+    command: --persist --name pizero -s irc.irchighway.net:6697 
     environment:
       - BASE_PATH=/
