feat: firefly kavita and ssh role

--- a/hosts/pizero/local.yml
+++ b/hosts/pizero/local.yml
@@ -11,7 +11,9 @@
         - install
         - core
         - tailscale
+        - docker
   roles:
     - core
     - docker
     - tailscale
+    - ssh
