--- a/hosts/pizero/hosts.ini
+++ b/hosts/pizero/hosts.ini
@@ -1,6 +1,6 @@
 [pizero]
-192.168.1.74
+192.168.1.74 ansible_user=pizero
+
 
 [pizero:vars]
-ansible_user=pizero
 ansible_ssh_private_key_file=~/.ssh/id_ed25519
