fix: ufw into its own role, plus enable ssh before enabling ufw

--- a/hosts/pizero/roles/core/tasks/main.yml
+++ b/hosts/pizero/roles/core/tasks/main.yml
@@ -1,15 +1,7 @@
 - name: Install packages
   become: true
   ansible.builtin.apt:
-    name: ["vim", "tmux", "btop", "git", "ssh", "ufw"]
-  tags:
-    - install
-    - core
-
-- name: Enable UFW
-  become: true
-  community.general.ufw:
-    state: enabled
+    name: ["vim", "tmux", "btop", "git", "ssh", "tldr"]
   tags:
     - install
     - core
