--- a/hosts/ubuntu-vm/local.yml
+++ b/hosts/ubuntu-vm/local.yml
@@ -18,3 +18,4 @@
     - { role: docker, tags: ["docker"] }
     - { role: ufw, tags: ["ufw"] }
     - { role: make-template, tags: ["make-template"] }
+    - { role: k3s, tags: ["k3s"] }
