--- a/hosts/ubuntu-vm/hosts.ini
+++ b/hosts/ubuntu-vm/hosts.ini
@@ -1,2 +1,28 @@
-[ubuntuvm]
-192.168.1.76 ansible_user=ubuntu-base
+[all:vars]
+ansible_user=ubuntu
+
+[load_balancer]
+balancer ansible_host=192.168.1.85 name=balancer
+
+[init_servers]
+server1 ansible_host=192.168.1.151 name=server1
+
+[ha_servers]
+server2 ansible_host=192.168.1.152 name=server2
+server3 ansible_host=192.168.1.154 name=server3
+
+[servers:children]
+init_servers
+ha_servers
+
+[nodes]
+node0 ansible_host=192.168.1.156 name=node0
+node1 ansible_host=192.168.1.161 name=node1
+
+[cluster:children]
+servers
+nodes
+
+[cluster:vars]
+token="mytoken"
+
