feat: nginx and ssl certs for pi

--- a/hosts/pizero/local.yml
+++ b/hosts/pizero/local.yml
@@ -12,9 +12,13 @@
         - core
         - tailscale
         - docker
+        - nginx
+        - ssl
   roles:
     - core
     - docker
     - tailscale
     # - ssh
     - ufw
+    - { role: "nginx", tags: ["nginx"] }
+    # - { role: "ssl", tags: ["ssl"] }
