--- a/services/filebrowser/docker-compose.yml
+++ b/services/filebrowser/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   filebrowser:
     image: filebrowser/filebrowser:latest
     container_name: filebrowser
+    restart: unless-stopped
     volumes:
       - /home:/srv #Change to match your directory
       - ./filebrowser.db:/database/filebrowser.db #Change to match your directory
