--- a/hosts/ubuntu-vm/roles/k3s/tasks/load-balancer.yml
+++ b/hosts/ubuntu-vm/roles/k3s/tasks/load-balancer.yml
@@ -5,11 +5,12 @@
     - name: Install haproxy
       ansible.builtin.apt:
         name: [haproxy]
-    - name: Copy haproxy config
-      ansible.builtin.copy:
-        src: "haproxy.conf"
-        dest: "/etc/haproxy/haproxy.cfg"
-        # readable and writeable by root, readable by all
+    - name: Generate haproxy configu
+      ansible.builtin.template:
+        src: templates/haproxy.conf.j2
+        dest: /etc/haproxy/haproxy.conf
+        owner: root
+        group: root
         mode: "0644"
 
     - name: Enable and restart HAProxy
