--- a/hosts/ubuntu-vm/roles/k3s/tasks/load-balancer.yml
+++ b/hosts/ubuntu-vm/roles/k3s/tasks/load-balancer.yml
@@ -7,8 +7,8 @@
         name: [haproxy]
     - name: Generate haproxy configu
       ansible.builtin.template:
-        src: templates/haproxy.conf.j2
-        dest: /etc/haproxy/haproxy.conf
+        src: templates/haproxy.cfg.j2
+        dest: /etc/haproxy/haproxy.cfg
         owner: root
         group: root
         mode: "0644"
