--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ services/immich/library
 aws/.terraform/providers/registry.opentofu.org/hashicorp/aws/5.98.0/linux_amd64
 aws/terraform.tfstate.backup
 aws/terraform.tfstate
+services/paperless/consume
+services/filebrowser/filebrowser.db
