--- a/services/paperless/docker-compose.yml
+++ b/services/paperless/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     volumes:
       - data:/usr/src/paperless/data
       - media:/usr/src/paperless/media
-      - ./export:/usr/src/paperless/export
+      - ~/Documents/paperless:/usr/src/paperless/export
       - ./consume:/usr/src/paperless/consume
     env_file: docker-compose.env
     environment:
