feat: traefik as reverse proxy

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ services/filebrowser/filebrowser.db
 services/jellyfin
 services/nginx/cloudflare.ini
 services/nginx/certbot/conf/renewal
+services/traefik/.env
