--- a/services/filebrowser/docker-compose.yml
+++ b/services/filebrowser/docker-compose.yml
@@ -1,8 +1,14 @@
-version: "3"
 services:
   filebrowser:
     image: filebrowser/filebrowser:latest
     container_name: filebrowser
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.filebrowser.rule=Host(`file.manujkarki.com.np`)"
+      - "traefik.http.routers.filebrowser.entrypoints=websecure"
+      - "traefik.http.routers.filebrowser.tls=true"
+      - "traefik.http.routers.filebrowser.tls.certresolver=letencrypt"
+      # - "traefik.http.services.filebrowser.loadbalancer.server.port=80"
     restart: unless-stopped
     volumes:
       - /mnt/media:/srv #Change to match your directory
