feat: authelia and traefik endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ services/jellyfin
 services/nginx/cloudflare.ini
 services/nginx/certbot/conf/renewal
 services/traefik/.env
+services/authelia/authelia/config/db.sqlite3
+services/authelia/authelia/config/notification.txt
