--- a/services/filebrowser/docker-compose.yml
+++ b/services/filebrowser/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "traefik.http.routers.filebrowser.entrypoints=websecure"
       - "traefik.http.routers.filebrowser.tls=true"
       - "traefik.http.routers.filebrowser.tls.certresolver=letencrypt"
+      - "traefik.http.routers.filebrowser.middlewares=authelia"
       # - "traefik.http.services.filebrowser.loadbalancer.server.port=80"
     restart: unless-stopped
     volumes:
