--- a/services/paperless/k8s/base/pvc.yml
+++ b/services/paperless/k8s/base/pvc.yml
@@ -2,9 +2,8 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: paperless-data
-  namespace: paperless
 spec:
-  storageClassName: standard
+  storageClassName: longhorn
   accessModes:
     - ReadWriteMany
   resources:
@@ -16,9 +15,8 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: paperless-media
-  namespace: paperless
 spec:
-  storageClassName: standard
+  storageClassName: longhorn
   accessModes:
     - ReadWriteMany
   resources:
@@ -30,9 +28,8 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: paperless-export
-  namespace: paperless
 spec:
-  storageClassName: standard
+  storageClassName: longhorn
   accessModes:
     - ReadWriteMany
   resources:
@@ -44,9 +41,8 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: paperless-consume
-  namespace: paperless
 spec:
-  storageClassName: standard
+  storageClassName: longhorn
   accessModes:
     - ReadWriteMany
   resources:
@@ -58,9 +54,8 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: paperless-redis
-  namespace: paperless
 spec:
-  storageClassName: standard
+  storageClassName: longhorn
   accessModes:
     - ReadWriteMany
   resources:
@@ -72,9 +67,8 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: paperless-postgres
-  namespace: paperless
 spec:
-  storageClassName: standard
+  storageClassName: longhorn
   accessModes:
     - ReadWriteMany
   resources:
