--- a/services/filebrowser/k8s/deployment.yml
+++ b/services/filebrowser/k8s/deployment.yml
@@ -15,6 +15,10 @@ spec:
       labels:
         app: filebrowser
     spec:
+      securityContext:
+        runAsUser: 1000
+        runAsNonRoot: true
+        fsGroup: 0
       containers:
         - name: filebrowser
           image: filebrowser/filebrowser:latest
@@ -46,7 +50,7 @@ spec:
             - name: media
               mountPath: /srv
             - name: filebrowser-config
-              mountPath: /home/filebrowser/database.db
+              mountPath: /database
       volumes:
         - name: media
           nfs:
