--- a/services/filebrowser/k8s/kustomization.yml
+++ b/services/filebrowser/k8s/kustomization.yml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: filebrowser
+namespace: apps
 
 resources:
   - deployment.yml
