--- a/services/filebrowser/k8s/service.yml
+++ b/services/filebrowser/k8s/service.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   selector:
     app: filebrowser
-  type: NodePort
+  type: ClusterIP
   ports:
     - name: filebrowser
       protocol: TCP
