feat: paperless nfs

--- a/services/paperless/k8s/base/deployment.yml
+++ b/services/paperless/k8s/base/deployment.yml
@@ -28,28 +28,34 @@ spec:
               value: "redis://paperless-redis:6379"
             - name: PAPERLESS_DBHOST
               value: "paperless-postgres"
+            - name: PAPERLESS_URL
+              value: https://paperless.manujkarki.com.np
+            - name: PAPERLESS_CONSUMER_POLLING
+              value: "10"
+            - name: PAPERLESS_OCR_LANGUAGES
+              value: nep
+            - name: PAPERLESS_FILENAME_FORMAT
+              value: "{{ original_name }}"
           volumeMounts:
             - mountPath: /usr/src/paperless/data
               name: paperless-data
             - mountPath: /usr/src/paperless/media
-              name: paperless-media
+              subPath: paperless/media
+              name: paperless-nfs
             - mountPath: /usr/src/paperless/export
-              name: paperless-export
+              subPath: paperless/export
+              name: paperless-nfs
             - mountPath: /usr/src/paperless/consume
-              name: paperless-consume
+              subPath: paperless/consume
+              name: paperless-nfs
       volumes:
         - name: paperless-data
           persistentVolumeClaim:
             claimName: paperless-data
-        - name: paperless-media
-          persistentVolumeClaim:
-            claimName: paperless-media
-        - name: paperless-export
-          persistentVolumeClaim:
-            claimName: paperless-export
-        - name: paperless-consume
-          persistentVolumeClaim:
-            claimName: paperless-consume
+        - name: paperless-nfs
+          nfs:
+            server: 192.168.1.67
+            path: /media/apps
 
 ---
 apiVersion: apps/v1
@@ -113,9 +119,13 @@ spec:
               value: paperless
             - name: POSTGRES_PASSWORD
               value: paperless
+            - name: PGDATA
+              value: /var/lib/postgresql/data/pgdata
+
           volumeMounts:
-            - mountPath: /var/lib/postgresql
+            - mountPath: /var/lib/postgresql/data
               name: paperless-postgres
+              readOnly: false
       volumes:
         - name: paperless-postgres
           persistentVolumeClaim:
