--- a/services/paperless/k8s/base/kustomization.yaml
+++ b/services/paperless/k8s/base/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: paperless
+namespace: apps
 
 resources:
   - deployment.yml
