--- a/services/monitoring/k8s/pvc.yml
+++ b/services/monitoring/k8s/pvc.yml
@@ -14,4 +14,19 @@ spec:
     requests:
       storage: 2Gi
 ---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: grafana-pvc
+  namespace: apps
+  labels:
+    app: grafana
+spec:
+  storageClassName: longhorn
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 2Gi
+---
 
