--- a/services/longhorn/ingress.yml
+++ b/services/longhorn/ingress.yml
@@ -4,7 +4,16 @@ kind: Ingress
 metadata:
   name: longhorn
   namespace: longhorn-system
+  annotations:
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.tls: "true"
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
+  tls:
+    - hosts:
+        - longhorn.manujkarki.com.np
+      secretName: longhorn-certificate-secret
+
   rules:
     - host: longhorn.manujkarki.com.np
       http:
