feat: monitoring namespace and ingress/https for grafana

--- a/services/monitoring/k8s/config-map.yml
+++ b/services/monitoring/k8s/config-map.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-config
-  namespace: apps
+  namespace: monitoring
 data:
   key: value
   prometheus.yaml: |
