--- a/services/monitoring/k8s/pvc.yml
+++ b/services/monitoring/k8s/pvc.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: prometheus-pvc
-  namespace: apps
+  namespace: monitoring
   labels:
     app: prometheus
 spec:
@@ -18,7 +18,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: grafana-pvc
-  namespace: apps
+  namespace: monitoring
   labels:
     app: grafana
 spec:
