--- a/services/monitoring/k8s/certificate.yml
+++ b/services/monitoring/k8s/certificate.yml
@@ -1,10 +1,10 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: longhorn-certificate-secret
-  namespace: longhorn-system
+  name: grafana-certificate-secret
+  namespace: monitoring
 spec:
-  secretName: longhorn-certificate-secret
+  secretName: grafana-certificate-secret
   issuerRef:
     name: letsencrypt-prod
     kind: ClusterIssuer
