--- a/services/monitoring/k8s/daemonset.yml
+++ b/services/monitoring/k8s/daemonset.yml
@@ -5,7 +5,7 @@ metadata:
     app.kubernetes.io/component: exporter
     app.kubernetes.io/name: node-exporter
   name: node-exporter
-  namespace: apps
+  namespace: monitoring
 spec:
   selector:
     matchLabels:
