--- a/services/certificate.yml
+++ b/services/certificate.yml
@@ -13,6 +13,6 @@ spec:
   secretTemplate:
     annotations:
       reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
-      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "apps,kube-system,longhorn-system,monitoring,traefik,default" # Control destination namespaces
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "apps,kube-system,longhorn-system,monitoring,traefik,default,argocd" # Control destination namespaces
       reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true" # Auto create reflection for matching namespaces
-      reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "apps,kube-system,longhorn-system,monitoring,traefik,default" # Control auto-reflection namespaces
+      reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "apps,kube-system,longhorn-system,monitoring,traefik,default,argocd" # Control auto-reflection namespaces
