--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ services/authelia/authelia/config/notification.txt
 .direnv/bin
 .direnv
 services/cert-manager/secret.yml
+incus/.terraform/providers/registry.opentofu.org/lxc/incus/1.0.0
+incus/terraform.tfstate
+incus/terraform.tfstate.backup
+incus/terraform.tfvars
