--- a/services/audiobookshelf/k8s/deployment.yml
+++ b/services/audiobookshelf/k8s/deployment.yml
@@ -4,9 +4,9 @@ metadata:
   name: audiobookshelf
   labels:
     app: audiobookshelf
-  namespace: audiobookshelf
+  namespace: apps
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: audiobookshelf
@@ -28,9 +28,6 @@ spec:
             - mountPath: /metadata
               name: audiobookshelf-metadata
       volumes:
-        - name: audiobookshelf-audiobooks
-          persistentVolumeClaim:
-            claimName: audiobookshelf-audiobooks
         - name: audiobookshelf-podcasts
           persistentVolumeClaim:
             claimName: audiobookshelf-podcasts
@@ -40,3 +37,7 @@ spec:
         - name: audiobookshelf-metadata
           persistentVolumeClaim:
             claimName: audiobookshelf-metadata
+        - name: audiobookshelf-audiobooks
+          nfs:
+            server: 192.168.1.67
+            path: /media/Audiobooks
