--- a/services/audiobookshelf/k8s/svc.yml
+++ b/services/audiobookshelf/k8s/svc.yml
@@ -4,14 +4,13 @@ metadata:
   labels:
     app: audiobookshelf
   name: audiobookshelf
-  namespace: audiobookshelf
+  namespace: apps
 spec:
   ports:
     - name: audiobookshelf
       port: 80
       protocol: TCP
       targetPort: 80
-      nodePort: 30081
   selector:
     app: audiobookshelf
   type: NodePort
