--- a/k8s/monitoring/ingress.yml
+++ b/k8s/monitoring/ingress.yml
@@ -12,6 +12,7 @@ spec:
   tls:
     - hosts:
         - grafana.manujkarki.com.np
+        - prometheus.manujkarki.com.np
       secretName: apps-certificate-secret
 
   rules:
@@ -25,6 +26,23 @@ spec:
                 name: grafana
                 port:
                   number: 3000
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: ssl-redirect
+                port:
+                  name: use-annotation
+    - host: prometheus.manujkarki.com.np
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: prometheus
+                port:
+                  number: 9090
           - path: /
             pathType: Prefix
             backend:
