--- a/k8s/longhorn/values.yml
+++ b/k8s/longhorn/values.yml
@@ -1,2 +1,10 @@
 persistence:
   defaultClassReplicaCount: 1
+preUpgradeChecker:
+  # -- Setting that allows Longhorn to perform pre-upgrade checks. Disable this setting when installing Longhorn using Argo CD or other GitOps solutions.
+  jobEnabled: false
+ingress:
+  enabled: true
+  host: longhorn.manujkarki.com.np
+  tls: true
+  tlsSecret: apps-certificate-secret
