feat: sops secret operator and argocd apps

--- a/k8s/cert-manager/certificate.yml
+++ b/k8s/cert-manager/certificate.yml
@@ -2,7 +2,6 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: apps-certificate-secret
-  namespace: apps
 spec:
   secretName: apps-certificate-secret
   issuerRef:
@@ -13,6 +12,6 @@ spec:
   secretTemplate:
     annotations:
       reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
-      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "apps,kube-system,longhorn-system,monitoring,traefik,default,argocd" # Control destination namespaces
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "apps,cert-manager,kube-system,longhorn-system,monitoring,traefik,default,argocd" # Control destination namespaces
       reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true" # Auto create reflection for matching namespaces
-      reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "apps,kube-system,longhorn-system,monitoring,traefik,default,argocd" # Control auto-reflection namespaces
+      reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "apps,cert-manager,kube-system,longhorn-system,monitoring,traefik,default,argocd" # Control auto-reflection namespaces
