--- a/k8s/cert-manager/secret.sops.yml
+++ b/k8s/cert-manager/secret.sops.yml
@@ -1,24 +1,25 @@
-# https://kubernetes.io/docs/concepts/configuration/secret/
-apiVersion: v1
-kind: Secret
+apiVersion: isindir.github.com/v1alpha3
+kind: SopsSecret
 metadata:
-  name: cloudflare-api-token-secret
+  name: sops-secret
   namespace: cert-manager
-type: Opaque
-stringData:
-  api-token: ENC[AES256_GCM,data:q4aP9KaHDCcB9Pm+FPKMQUjnOuHBe3GEh62dtCyi9DwD11hfvdzh7A==,iv:4Jzqn4S9eudJUSlqWKfPh37BHUiwoDhtXdcakqzu8Lg=,tag:/prdiyJYSV+LDLNjnhdBug==,type:str]
+spec:
+  secretTemplates:
+    - name: cloudflare-api-token-secret
+      stringData:
+        api-token: ENC[AES256_GCM,data:+bt3DfIHSi+l/I9qgdkR99uOEpdIR2co+UoR/cBoQUxY6XWGgjYPyw==,iv:OgANjODtPHEj9cU7+lhtidNHIq2qQ6Nvc0BVYUNrWvc=,tag:bHb1y3sFB7hTD/Ym0faLXw==,type:str]
 sops:
   age:
     - recipient: age1cnhy4vhemg9lat9ja5v4e7h7qan5r2rwdkl6qgwjxmhhrusqr36q4er848
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqL1RKMUFldTRZRHpXZk82
-        OTkxMm03Z29jb2VDQTErNTVFMm5QNGRtQ3p3CmFsYUpWa2Z1b2VCOUZKY1Y1Wk1C
-        MFVERUVOc2h5eGQwRVdZVFJMVUh4QW8KLS0tIDZkNTJ2VnVlUzFnd0o1dFVGK2FB
-        bndVL0gxQWxSMGlXMFQvRkVBSCtFNVUK5NC0Cmnl1Ak9muV1rKdtdW10tV074kJH
-        QI+/EymIvAWgwRecqWF2rJYNXZnUG/WBfz7cbTwc5Ai2F1IWd2BqQw==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEWk1IbVhYcDVxM04xa2xS
+        SkxhMW1aYXY4dzV3Z3RIRnowMFRqNXV5NXk4CjU1TVcxSDNkQ0YwNkMybTRlOTFC
+        NzcvNGZ1dWJvc3dLSjdnbmNrMm1kK0kKLS0tIE1Wb3VvMHpFd256cHVQM3gwTHZP
+        TjBCeFVVYWJXZ2JIeDMzOGVkYS9iZjQKMIBTBO0pRSfQ9bIHcqlx505NCh8HWY05
+        JoKdEqu/ZXu1qi5SqN7A+KWRImBqtQOEgxDQnAf2V4TJlRS6KDBnbw==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-10-15T09:57:42Z"
-  mac: ENC[AES256_GCM,data:9i+lkd0aiMk58Xl464MnHm2ZTnIH/Xjb41K2M73g0q3PUiLavOBNyd7XYze9Af6TtURmrruPDcokHQw+J4HpwMlTJthKF9bv3qF8MwgBdj44wEBGHI9O6pwaBcVKCKVji1Jb6bHdsN0xioz1wtXia7f/rTbl5P85CqxWUfNJgMI=,iv:XOiWMIs4j7JdeT3MwaW8BQ793vr/+dwPrjAOO2T3Hwg=,tag:qGqzRSussiwf8UbkRpW3yQ==,type:str]
+  lastmodified: "2025-11-14T17:13:53Z"
+  mac: ENC[AES256_GCM,data:tQJ1cI2/Bcv4Qmlzsb6X5yecNTVUvN6kYSb4Ou7UZI1S27eho461JutYbtJg0I9/hbp0JqmSJTD/54RUbyRQDNr2SZbau7R5QWKaGsJswlLwgoAlnZUwP7w5/DQD9ORh64dKfnqDhmdoBownTqiDUiPO5fSWP2rjOaUZEMENTeo=,iv:dYnL0yFtdaI4NHvGI91mM5bRI9v1UQ92+RTEpUc1Duo=,tag:CGYbWAOngu8uLA19G1yD8A==,type:str]
   encrypted_regex: ^(secret|id|token|data|stringData)$
   version: 3.11.0
