--- a/k8s/immich/pvc.yml
+++ b/k8s/immich/pvc.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: immich-redis
 spec:
-  storageClassName: longhorn
+  storageClassName: nfs-delete
   accessModes:
     - ReadWriteMany
   resources:
@@ -16,7 +16,7 @@ apiVersion: v1
 metadata:
   name: immich-postgres
 spec:
-  storageClassName: longhorn
+  storageClassName: nfs-delete
   accessModes:
     - ReadWriteMany
   resources:
