--- a/k8s/monitoring/pvc.yml
+++ b/k8s/monitoring/pvc.yml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app: prometheus
 spec:
-  storageClassName: longhorn
+  storageClassName: nfs-delete
   accessModes:
     - ReadWriteOnce
   resources:
@@ -22,7 +22,7 @@ metadata:
   labels:
     app: grafana
 spec:
-  storageClassName: longhorn
+  storageClassName: nfs-delete
   accessModes:
     - ReadWriteOnce
   resources:
