--- a/k8s/paperless/base/pvc.yml
+++ b/k8s/paperless/base/pvc.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: paperless-data
 spec:
-  storageClassName: longhorn
+  storageClassName: nfs-delete
   accessModes:
     - ReadWriteMany
   resources:
@@ -16,7 +16,7 @@ apiVersion: v1
 metadata:
   name: paperless-redis
 spec:
-  storageClassName: longhorn
+  storageClassName: nfs-delete
   accessModes:
     - ReadWriteMany
   resources:
@@ -29,7 +29,7 @@ apiVersion: v1
 metadata:
   name: paperless-postgres
 spec:
-  storageClassName: longhorn
+  storageClassName: nfs-delete
   accessModes:
     - ReadWriteMany
   resources:
