--- a/k8s/audiobookshelf/deployment.yml
+++ b/k8s/audiobookshelf/deployment.yml
@@ -18,6 +18,9 @@ spec:
       containers:
         - image: ghcr.io/advplyr/audiobookshelf:2.21.0
           name: audiobookshelf
+          ports:
+            - containerPort: 80
+              name: audiobookshelf
           volumeMounts:
             - mountPath: /audiobooks
               name: audiobookshelf-audiobooks
