--- a/k8s/immich/ingress.yml
+++ b/k8s/immich/ingress.yml
@@ -3,11 +3,11 @@ kind: Ingress
 metadata:
   name: immich
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
 spec:
   tls:
     - hosts:
-        - immich.manujkarki.com.np
+        - photos.manujkarki.com.np
       secretName: apps-certificate-secret
   rules:
     - host: photos.manujkarki.com.np
