--- a/k8s/immich/deployment.yml
+++ b/k8s/immich/deployment.yml
@@ -68,7 +68,7 @@ spec:
         - name: photos
           nfs:
             server: 192.168.1.67
-            path: /media/Photos
+            path: /media/immich
       restartPolicy: Always
 
 ---
