feat: cnpg monitoring

--- a/k8s/cnpg/cluster-values.yml
+++ b/k8s/cnpg/cluster-values.yml
@@ -3,6 +3,12 @@ cluster:
   storage:
     size: 10Gi
     storageClass: "local-path"
+  monitoring:
+    enabled: true
+    podMonitor:
+      enabled: false
+    prometheusRule:
+      enabled: false
   roles:
     - name: atuin
       ensure: present
