--- a/k8s/cnpg/helmfile.yml
+++ b/k8s/cnpg/helmfile.yml
@@ -17,3 +17,10 @@ releases:
     createNamespace: true
     values:
       - cluster-values.yml
+  - name: barman
+    namespace: cnpg-system
+    chart: cnpg/plugin-barman-cloud
+    version: 0.4.0
+    createNamespace: true
+    values:
+      - barman-values.yml
