--- a/k8s/cnpg/cluster-values.yml
+++ b/k8s/cnpg/cluster-values.yml
@@ -6,9 +6,9 @@ cluster:
   monitoring:
     enabled: true
     podMonitor:
-      enabled: false
+      enabled: true
     prometheusRule:
-      enabled: false
+      enabled: true
   roles:
     - name: atuin
       ensure: present
