fix: kube-prometheus-stack crd size limit

--- a/k8s/apps/kube-prometheus-stack.yml
+++ b/k8s/apps/kube-prometheus-stack.yml
@@ -21,6 +21,8 @@ spec:
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
+      - ServerSideApply=true
+      - Replace=true
     automated:
       prune: true
       selfHeal: true
